apps/longhorn/templates/network.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tls-gateway-longhorn
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  gatewayClassName: cilium
  listeners:
  - name: https-longhorn
    protocol: HTTPS
    port: 443
    hostname: "longhorn.cikli.com"
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      certificateRefs:
      - kind: Secret
        name: longhorn-1-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cilium-route-longhorn
  annotations:
    external-dns.alpha.kubernetes.io/hostname: longhorn.cikli.com
spec:
  parentRefs:
  - name: tls-gateway-longhorn
  hostnames:
  - "longhorn.cikli.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: longhorn-frontend
      port: 80
